Package_Tools/include-C/suitesparse/SuiteSparse_config.pp

(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function SUITESPARSE_BLAS_DNRM2(n:PSUITESPARSE_BLAS_INT; X:Pdouble; incx:PSUITESPARSE_BLAS_INT):Tdouble;cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function SUITESPARSE_BLAS_SNRM2(n:PSUITESPARSE_BLAS_INT; X:Psingle; incx:PSUITESPARSE_BLAS_INT):single;cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function SUITESPARSE_BLAS_DZNRM2(n:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT):Tdouble;cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function SUITESPARSE_BLAS_SCNRM2(n:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT):single;cdecl;external;
{------------------------------------------------------------------------------ }
{ larfg: generate Householder reflector }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_DLARFG(n:PSUITESPARSE_BLAS_INT; alpha:Pdouble; X:Pdouble; incx:PSUITESPARSE_BLAS_INT; tau:Pdouble);cdecl;external;
{ input: }
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_SLARFG(n:PSUITESPARSE_BLAS_INT; alpha:Psingle; X:Psingle; incx:PSUITESPARSE_BLAS_INT; tau:Psingle);cdecl;external;
{ input: }
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_ZLARFG(n:PSUITESPARSE_BLAS_INT; alpha:pointer; X:pointer; incx:PSUITESPARSE_BLAS_INT; tau:pointer);cdecl;external;
{ input: }
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ output: }
procedure SUITESPARSE_LAPACK_CLARFG(n:PSUITESPARSE_BLAS_INT; alpha:pointer; X:pointer; incx:PSUITESPARSE_BLAS_INT; tau:pointer);cdecl;external;
{------------------------------------------------------------------------------ }
{ larf: apply Householder reflector }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
procedure SUITESPARSE_LAPACK_DLARF(side:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; V:Pdouble; incv:PSUITESPARSE_BLAS_INT; 
            tau:Pdouble; C:Pdouble; ldc:PSUITESPARSE_BLAS_INT; Work:Pdouble);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
procedure SUITESPARSE_LAPACK_SLARF(side:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; V:Psingle; incv:PSUITESPARSE_BLAS_INT; 
            tau:Psingle; C:Psingle; ldc:PSUITESPARSE_BLAS_INT; Work:Psingle);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
procedure SUITESPARSE_LAPACK_ZLARF(side:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; V:pointer; incv:PSUITESPARSE_BLAS_INT; 
            tau:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT; Work:pointer);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
{ workspace: }
procedure SUITESPARSE_LAPACK_CLARF(side:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; V:pointer; incv:PSUITESPARSE_BLAS_INT; 
            tau:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT; Work:pointer);cdecl;external;
{------------------------------------------------------------------------------ }
{ SuiteSparse_BLAS_library: return name of BLAS library found }
{------------------------------------------------------------------------------ }
{ Returns the name of the BLAS library found by SuiteSparse_config }
(* Const before type ignored *)
function SuiteSparse_BLAS_library:Pchar;cdecl;external;
{------------------------------------------------------------------------------ }
{ SuiteSparse_BLAS_integer_size: return sizeof (SUITESPARSE_BLAS_INT) }
{------------------------------------------------------------------------------ }
function SuiteSparse_BLAS_integer_size:Tsize_t;cdecl;external;
{ C++ end of extern C conditionnal removed }
{$endif}

implementation

{ was #define dname def_expr }
function SUITESPARSE_OPENMP_MAX_THREADS : longint; { return type might be wrong }
  begin
    SUITESPARSE_OPENMP_MAX_THREADS:=omp_get_max_threads;
  end;

{ was #define dname def_expr }
function SUITESPARSE_OPENMP_GET_NUM_THREADS : longint; { return type might be wrong }
  begin
    SUITESPARSE_OPENMP_GET_NUM_THREADS:=omp_get_num_threads;
  end;

{ was #define dname def_expr }
function SUITESPARSE_OPENMP_GET_WTIME : longint; { return type might be wrong }
  begin
    SUITESPARSE_OPENMP_GET_WTIME:=omp_get_wtime;
  end;

{ was #define dname def_expr }
function SUITESPARSE_OPENMP_GET_THREAD_ID : longint; { return type might be wrong }
  begin
    SUITESPARSE_OPENMP_GET_THREAD_ID:=omp_get_thread_num;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SUITESPARSE_VER_CODE(main,sub : longint) : longint;
begin
  SUITESPARSE_VER_CODE:=(main*1000)+sub;
end;

{ was #define dname def_expr }
function SUITESPARSE_VERSION : longint; { return type might be wrong }
  begin
    SUITESPARSE_VERSION:=SUITESPARSE_VER_CODE(7,6);
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SUITESPARSE__VERCODE(main,sub,patch : longint) : longint;
begin
  SUITESPARSE__VERCODE:=(((main*1000)+sub)*1000)+patch;
end;

{ was #define dname def_expr }
function SUITESPARSE__VERSION : longint; { return type might be wrong }
  begin
    SUITESPARSE__VERSION:=SUITESPARSE__VERCODE(7,6,1);
  end;


end.
